WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202784
[GTK][WPE] Lots of media related tests crashing or flaky after
r250918
- [ Mac WK2 ] Layout Test fast/mediastream/MediaStreamTrack-getSettings.html is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=202784
Summary
[GTK][WPE] Lots of media related tests crashing or flaky after r250918 - [ Ma...
Miguel Gomez
Reported
2019-10-10 02:42:09 PDT
There are lots of tests in both bots crashing with this backtrace: Program terminated with signal SIGFPE, Arithmetic exception. #0 0x00007f80c9d9884f in WebCore::WrappedMockRealtimeAudioSource::render(WTF::Seconds) () from /home/buildbot/wpe/wpe-linux-64-release/build/WebKitBuild/Release/lib/libWPEWebKit-1.0.so.3 #1 0x00007f80cac16fdd in WTF::RunLoop::performWork() () from /home/buildbot/wpe/wpe-linux-64-release/build/WebKitBuild/Release/lib/libWPEWebKit-1.0.so.3 #2 0x00007f80cac7ac79 in WTF::RunLoop::RunLoop()::{lambda(void*)#1}::_FUN(void*) () from /home/buildbot/wpe/wpe-linux-64-release/build/WebKitBuild/Release/lib/libWPEWebKit-1.0.so.3 #3 0x00007f80c23e06b8 in g_main_dispatch (context=0x7f80080572e0) at ../../Source/glib-2.58.1/glib/gmain.c:3182 #4 g_main_context_dispatch (context=context@entry=0x7f80080572e0) at ../../Source/glib-2.58.1/glib/gmain.c:3847 #5 0x00007f80c23e0a78 in g_main_context_iterate (context=0x7f80080572e0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../../Source/glib-2.58.1/glib/gmain.c:3920 #6 0x00007f80c23e0d62 in g_main_loop_run (loop=0x7f800818f5c0) at ../../Source/glib-2.58.1/glib/gmain.c:4116 #7 0x00007f80cac7b760 in WTF::RunLoop::run() () from /home/buildbot/wpe/wpe-linux-64-release/build/WebKitBuild/Release/lib/libWPEWebKit-1.0.so.3 #8 0x00007f80cac185db in WTF::Thread::entryPoint(WTF::Thread::NewThreadContext*) () from /home/buildbot/wpe/wpe-linux-64-release/build/WebKitBuild/Release/lib/libWPEWebKit-1.0.so.3 #9 0x00007f80cac7c169 in WTF::wtfThreadEntryPoint(void*) () from /home/buildbot/wpe/wpe-linux-64-release/build/WebKitBuild/Release/lib/libWPEWebKit-1.0.so.3 #10 0x00007f80c2bfcfa3 in start_thread (arg=<optimized out>) at pthread_create.c:486 #11 0x00007f80c1d864cf in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95 The failing tests in the WPE bot are (at least at
r250954
, there will be more probably) fast/mediastream/MediaDevices-addEventListener.html [ Crash Pass ] fast/mediastream/MediaDevices-getUserMedia.html [ Crash Pass ] fast/mediastream/MediaStream-video-element-remove-track.html [ Crash Pass ] fast/mediastream/MediaStream-video-element.html [ Crash Pass ] fast/mediastream/MediaStreamTrack-getSettings.html [ Crash Pass ] fast/mediastream/RTCPeerConnection-addTrack-reuse-sender.html [ Crash Pass ] fast/mediastream/RTCPeerConnection-stable.html [ Crash Pass ] fast/mediastream/apply-constraints-advanced.html [ Crash Pass ] fast/mediastream/constraint-intrinsic-size.html [ Crash Pass ] fast/mediastream/get-user-media-device-id.html [ Crash Failure ] fast/mediastream/getUserMedia-default.html [ Crash Pass ] fast/mediastream/getUserMedia-deny-persistency4.html [ Crash Pass ] fast/mediastream/getUserMedia-grant-persistency2.html [ Crash Pass ] fast/mediastream/getUserMedia-webaudio.html [ Crash Pass Timeout ] fast/mediastream/media-stream-page-muted.html [ Crash Timeout ] fast/mediastream/media-stream-track-muted.html [ Crash Pass ] fast/mediastream/mock-media-source-webaudio.html [ Crash Pass Timeout ] imported/w3c/web-platform-tests/encrypted-media/clearkey-mp4-setmediakeys-multiple-times-with-different-mediakeys.https.html [ Crash Pass ] imported/w3c/web-platform-tests/html/browsers/the-window-object/apis-for-creating-and-navigating-browsing-contexts-by-name/open-features-non-integer-innerwidth.html [ Crash Failure ] imported/w3c/web-platform-tests/mediacapture-streams/MediaStream-MediaElement-preload-none.https.html [ Crash Pass ] webrtc/filtering-ice-candidate-after-reload.html [ Crash Pass Timeout ] webrtc/negotiatedneeded-event-addStream.html [ Crash Pass ] webrtc/rtcpeerconnection-error-messages.html [ Crash Pass ] webrtc/video-update-often.html [ Crash Pass ] And the tests failing on the GTK bot: fast/mediastream/MediaDevices-getUserMedia.html [ Crash Pass ] fast/mediastream/MediaStream-add-ended-tracks.html [ Crash Timeout ] fast/mediastream/MediaStream-page-muted.html [ Crash Pass Timeout ] fast/mediastream/MediaStream-video-element-remove-track.html [ Crash Failure ] fast/mediastream/MediaStreamTrack-clone.html [ Crash Pass ] fast/mediastream/RTCPeerConnection-onnegotiationneeded.html [ Crash Pass ] fast/mediastream/RTCPeerConnection-setRemoteDescription-offer.html [ Crash Pass ] fast/mediastream/apply-constraints-advanced.html [ Crash Pass ] fast/mediastream/apply-constraints-video.html [ Crash Pass ] fast/mediastream/constraint-intrinsic-size.html [ Crash Pass ] fast/mediastream/device-change-event-2.html [ Crash Failure ] fast/mediastream/enumerate-devices-change-event.html [ Crash Pass ] fast/mediastream/getUserMedia-default.html [ Crash Pass ] fast/mediastream/getUserMedia-deny-persistency4.html [ Crash Pass ] fast/mediastream/getUserMedia-grant-persistency2.html [ Crash Pass ] fast/mediastream/getUserMedia-webaudio.html [ Crash Pass Timeout ] fast/mediastream/media-device-info.html [ Crash Pass ] fast/mediastream/media-stream-page-muted.html [ Crash Timeout ] fast/mediastream/mock-media-source-webaudio.html [ Crash Pass Timeout ] http/tests/media/media-stream/device-change-event-in-iframe.html [ Crash Pass ] imported/w3c/web-platform-tests/mediacapture-streams/MediaStream-MediaElement-preload-none.https.html [ Crash Pass Failure ] imported/w3c/web-platform-tests/mediacapture-streams/MediaStream-default-feature-policy.https.html [ Crash Pass ] imported/w3c/web-platform-tests/mediacapture-streams/MediaStreamTrack-end-manual.https.html [ Crash Pass ] imported/w3c/web-platform-tests/mediacapture-streams/MediaStreamTrack-init.https.html [ Crash Pass ] webrtc/addICECandidate-closed.html [ Crash Pass ] webrtc/audio-muted-stats.html [ Crash Pass ] webrtc/clone-audio-track.html [ Crash Pass Failure ] webrtc/ephemeral-certificates-and-cnames.html [ Crash Pass ] webrtc/h264-packetization-mode.html [ Crash Pass ] webrtc/ice-candidate-sdpMLineIndex.html [ Crash Pass ] webrtc/peer-connection-audio-mute2.html [ Crash Pass ]
Attachments
Patch
(4.22 KB, patch)
2019-10-10 06:07 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2019-10-10 05:55:17 PDT
Strange - why was this not caught by the EWS bots?
Eric Carlson
Comment 2
2019-10-10 05:55:35 PDT
I'll have a patch with a fix up shortly.
Eric Carlson
Comment 3
2019-10-10 06:07:55 PDT
Created
attachment 380636
[details]
Patch
Miguel Gomez
Comment 4
2019-10-10 06:27:48 PDT
(In reply to Eric Carlson from
comment #3
)
> Created
attachment 380636
[details]
> Patch
I've checked that it fixes the issue. Thanks Eric!! :)
WebKit Commit Bot
Comment 5
2019-10-10 08:31:28 PDT
Comment on
attachment 380636
[details]
Patch Clearing flags on attachment: 380636 Committed
r250971
: <
https://trac.webkit.org/changeset/250971
>
WebKit Commit Bot
Comment 6
2019-10-10 08:31:30 PDT
All reviewed patches have been landed. Closing bug.
Carlos Alberto Lopez Perez
Comment 7
2019-10-11 11:26:48 PDT
(In reply to Eric Carlson from
comment #1
)
> Strange - why was this not caught by the EWS bots?
The GTK and WPE EWS bots don't run layout tests. We tried once for GTK but it didn't work well, our tree (regarding layout tests results) is usually close to green but never green.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug